--- a/QuizWebsite.Vue/Views/MultiPlayer/ClassicGame.cshtml
+++ b/QuizWebsite.Vue/Views/MultiPlayer/ClassicGame.cshtml
@@ -65,9 +65,10 @@
         data: {
             connectionId: "",
             started: false,
-            countDown: 20,
+            countDown: 25,
             answer: "",
             groupName: "",
+            questionId: "",
             ready: false,
             room: [{
                 id: "",
@@ -105,20 +106,25 @@
                                     answerRequest.answerText, this.room.players.filter(p => p.connectionId == this.connectionId)[0].colorCode)
                             }
                         })
-
                 }
             },
             countDownTimer() {
-                    setTimeout(() => {
+                var start = Date.now();
+                setInterval(function () {
+                    var delta = app.room.question[0].questionEnd - Date.now(); // milliseconds elapsed since start
+                    app.countDown = Math.floor(delta / 1000); // in seconds
+                    if (app.countDown <= 0) {
                         axios
-                            .get(url + 'api/Rooms/?name=' + this.groupName)
+                            .get(url + 'api/Rooms/?name=' + app.groupName)
                             .then(response => {
-                                console.log(response.data)
-                                app.room = response.data
-                                app.countDown = 20
+                                if (app.questionId != response.data.question[0].questionId) {
+                                    app.room = response.data
+                                    delta = app.room.question[0].questionEnd - Date.now(); // milliseconds elapsed since start
+                                    app.countDown = Math.floor(delta / 1000); // in seconds
+                                }
                             })
-                        this.countDownTimer()
-                    }, 1000)
+                    }
+                }, 1000);
             },
             AddToGroup: function () {
                 let groupName = ""
@@ -130,8 +136,8 @@
                         axios
                             .get(url + 'api/Rooms/?name=' + groupName)
                             .then(response => {
-                                console.log(response.data)
                                 app.room = response.data
+                                app.questionId = response.data.question[0].questionId
                                 app.countDown = 20
                             })
                         connection.on('userJoined', function () {
