--- a/QuizWebsite.Vue/Views/MultiPlayer/ClassicGame.cshtml
+++ b/QuizWebsite.Vue/Views/MultiPlayer/ClassicGame.cshtml
@@ -101,7 +101,6 @@
                         .post(url + 'api/Questions/player/' + this.connectionId + '/answer', answerRequest)
                         .then(r => {
                             if (r.data.place > 0) {
-                                console.log(app.groupName)
                                 connection.invoke('answer', r.data.place,
                                     answerRequest.answerText, this.room.players.filter(p => p.connectionId == this.connectionId)[0].colorCode)
                             }
@@ -114,20 +113,29 @@
                     if (app.countDown >= 1) {
                         var delta = app.room.question[0].questionEnd - Date.now(); // milliseconds elapsed since start
                         app.countDown = Math.floor(delta / 1000); // in seconds
-                        console.log(!app.room.done)
 
                     }
                     else {
                         axios
                             .get(url + 'api/Rooms/?name=' + app.groupName)
                             .then(response => {
-                                console.log(response.data.done)
                                 if (response.data.done) {
                                     app.room = response.data
                                 }else if (app.questionId != response.data.question[0].questionId) {
                                     app.room = response.data
                                     delta = app.room.question[0].questionEnd - Date.now(); // milliseconds elapsed since start
                                     app.countDown = Math.floor(delta / 1000); // in seconds
+                                } else {
+                                    axios
+                                        .get(url + 'api/Questions/' + app.questionId)
+                                        .then(response => {
+                                            app.answered = []
+                                            for (var i = 0; i < 10; i++) {
+                                                app.answered.push(response.data.answers.filter(function (el) {
+                                                    return el.place == i+1
+                                                })[0].answerText);
+                                            }
+                                        })
                                 }
                             })
                     }
@@ -167,7 +175,6 @@
                                 .get(url + 'api/Rooms/?name=' + groupName)
                                 .then(response => {
                                     app.room = response.data
-                                    console.log(response.data)
                                     app.countDown = 20
                                     app.countDownTimer()
                                 })
