--- a/QuizWebsite.Vue/wwwroot/css/site.css
+++ b/QuizWebsite.Vue/wwwroot/css/site.css
@@ -239,12 +239,18 @@ body {
     white-space: nowrap;
     overflow: hidden;
 }
+.question {
+    padding-right: 10em;
+    padding-left: 10em;
+    margin-right: 8em;
+    margin-left: 8em;
+}
 .sidebar {
     top: 0; /* Stay at the top */
     left: 10%;
     position: absolute; /* Fixed Sidebar (stay in place on scroll) */
 }
-@media (max-width: 950px) {
+@media (max-width: 1200px) {
     .sidebar {
         top: 0; /* Stay at the top */
         left: 0;
@@ -267,6 +273,13 @@ body {
         text-overflow: ellipsis;
         white-space: nowrap;
         overflow: hidden;
+    }
+
+    .question {
+        padding-right: 6em;
+        padding-left: 6em;
+        margin-right: 3em;
+        margin-left: 3em;
     }
 }
 @media (max-width: 600px) {
@@ -317,6 +330,21 @@ body {
         text-overflow: ellipsis;
         white-space: nowrap;
         overflow: hidden;
+    }
+    .unanswered {
+        margin-left: 1rem;
+        margin-right: 1rem;
+        margin-top: 0.5rem;
+        background-color: #dbdbdb;
+        width: 8em;
+        padding: 0.6em;
+        border: 1px solid #e3e3e3;
+        border-radius: 25px;
+        display: inline-block;
+        -webkit-user-select: none; /* Safari */
+        -moz-user-select: none; /* Firefox */
+        -ms-user-select: none; /* IE10+/Edge */
+        user-select: none; /* Standard */
     }
 }
 .remove{
