Remove text when answered

--- a/QuizWebsite.Vue/Views/MultiPlayer/ClassicGame.cshtml
+++ b/QuizWebsite.Vue/Views/MultiPlayer/ClassicGame.cshtml
@@ -116,6 +116,7 @@
                                 var audio = new Audio('../audio/wrong.mp3');
                                 audio.play();
                             }
+                            this.answer = "";
                         })
                 }
             },
